syntax = "proto3";
package touchpad.v1;

import "discover_validation.proto";
import "touch_packet.proto";
import "handshake.proto";
import "heartbeat.proto";

message Wrapper {
  oneof payload {
    Welcome     welcome           = 1;
    TouchPacket touch_packet      = 2;
    HeartBeat   heart_beat        = 3;
    DiscoverValidation discover_validation = 4;
    Reject reject = 5;
  }
}
